[gd_scene load_steps=12 format=3 uid="uid://c1al6gv6gqhbr"]

[ext_resource type="Theme" uid="uid://dyo1wb3t733tx" path="res://art/themes/main_theme.tres" id="1_mhnvy"]
[ext_resource type="Script" uid="uid://dqs6sw1ys7k2h" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://d3wtrkg1rslcu" path="res://art/visual/Background.jpg" id="1_yqeox"]
[ext_resource type="FontFile" uid="uid://dtlptuq8jtmu6" path="res://art/fonts/Cocogoose Pro Outlined Trial.ttf" id="4_4ytvr"]
[ext_resource type="FontFile" uid="uid://dt6is4otshqa" path="res://art/fonts/Nougat-ExtraBlack.ttf" id="5_4ytvr"]
[ext_resource type="PackedScene" uid="uid://daobdcr1afosw" path="res://scenes/settings_panel.tscn" id="6_g3eks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bu2hm"]
bg_color = Color(0.266667, 0.619608, 0.254902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.138554, 0.340711, 0.131379, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.116223, 0.294445, 0.109871, 1)
shadow_size = 9
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13sgg"]
bg_color = Color(0, 0.45, 0.0375, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v86rl"]
bg_color = Color(4.69275e-07, 0.316249, 0.0186522, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3eks"]
bg_color = Color(0, 0.45098, 0.0392157, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0.317647, 0.0196078, 1)
shadow_size = 5
shadow_offset = Vector2(-1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ytvr"]
bg_color = Color(0, 0.45098, 0.0392157, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mhnvy")
script = ExtResource("1_vjb58")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(541, 330)
texture = ExtResource("1_yqeox")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -501.0
offset_top = 75.0
offset_right = 502.0
offset_bottom = 165.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_4ytvr")
theme_override_font_sizes/font_size = 90
text = "Yam!"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.577
anchor_right = 0.5
anchor_bottom = 0.577
offset_left = -240.0
offset_top = -123.896
offset_right = 240.0
offset_bottom = 134.104
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Start" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Nouvelle partie"

[node name="Settings" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Param√®tres"

[node name="Quit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quitter le jeu
"

[node name="PlayerSettings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -118.0
offset_right = 240.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bu2hm")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerSettings"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -143.0
offset_right = 147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="PlayerCountText" type="Label" parent="PlayerSettings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Nombre de joueurs"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Minus" type="Button" parent="PlayerSettings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/focus = SubResource("StyleBoxFlat_4ytvr")
text = "-
"

[node name="Count" type="Label" parent="PlayerSettings/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4ytvr")
theme_override_font_sizes/font_size = 30
text = "1"

[node name="Plus" type="Button" parent="PlayerSettings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/focus = SubResource("StyleBoxFlat_4ytvr")
text = "+"

[node name="StartGame" type="Button" parent="PlayerSettings/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Commencer"

[node name="SettingsPanel" parent="." instance=ExtResource("6_g3eks")]
visible = false
layout_mode = 0
offset_left = 336.0
offset_top = 201.0
offset_right = 816.0
offset_bottom = 545.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PlayerSettings/VBoxContainer/HBoxContainer/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="PlayerSettings/VBoxContainer/HBoxContainer/Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="PlayerSettings/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
